# openstack-salt-specs

./: .gitignore  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
doc/source/: conf.py  index.rst
specs/: template.rst
specs/liberty/: initial_documentation.rst
specs/mitaka/: installation_guide.html
