[metadata]
name = openstack-salt-specs
summary = Design Specifications for openstack-salt
description-file =
    README.rst
author = OpenStack
author-email = openstack-salt@lists.launchpad.net
home-page = https://wiki.openstack.org/wiki/OpenStackSalt
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = True

[wheel]
universal = 1